fixed screen overflow

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -14,6 +14,7 @@
  }
  html {
   background: url('../webpage/resources/gcmap-tile-01.png'); 
+  overflow: hidden;
  }
  #hole {
   position:absolute;
